--- a/index.html
+++ b/index.html
@@ -4,5 +4,11 @@
 	<head></head>
 	<body>
 		<h2>HTML practice</h2>
+		<p>test</p>
+		<ul>
+			<li>test</li>
+			<li>practice</li>
+		</ul>
+		
 	</body>
 </html>
