topを追加しました

--- a/index.html
+++ b/index.html
@@ -45,6 +45,41 @@
 			
 		</header>
 		
+		<section id="top">
+			<div class="top-image clearfix">
+				<div class="top-content">
+					<a href="#">
+						<div>
+							<img src="img/top-img1.png" alt="image1" class="top-img top-img1">	
+						</div>
+						<p><span class="top-title">【大学新入生むけ】選ぶ上でに知っておくべきサークルと部活の違い</span></p>
+						<p class="top-moji">学生大百科編集部</p>
+					</a>
+				</div>
+				<div class="top-content">
+					<a href="#">
+						<div>
+							<img src="img/top-img2.png" alt="image2" class="top-img top-img2">	
+						</div>
+						<p><span class="top-title">【新入生必見】大学における友人の作り方</span></p>
+						<p class="top-moji">学生大百科編集部</p>
+					</a>
+				</div>
+				<div class="top-content">
+					<a href="#">
+						<div>
+							<img src="img/top-img3.jpg" alt="image2" class="top-img top-img3">	
+						</div>
+						<p><span class="top-title">今さら聞けない！知らないと恥ずかしい大学生用語・略語35選</span></p>
+						<p class="top-moji">ryokp</p>
+					</a>
+				</div>
+
+			</div>
+			
+		</section>
+		
+		
 		
 	</body>
 </html>
