headerとfooterを変更しました。

--- a/index.html
+++ b/index.html
@@ -16,13 +16,12 @@
 				<nav class="nav clearfix">
 					<ul class="nav_li clearfix">
 						<li><a href="http://student-magazine.com/about" class="nav_link">>このサイトについて</a></li>
-						<li><a href="http://student-magazine.com/contribution" class="nav_link">>記事の寄稿について</a></li>
-							
+						<li><a href="http://student-magazine.com/contribution" class="nav_link">>記事の寄稿について</a></li>	
 					</ul>
 				</nav>
 				</section>
 			</div>
-			<div id="header-bottom clearfix">
+			<div class="header-bottom clearfix">
 				<form action="" class="form-box form-inline">
 					<div class="form-group clearfix">
 					
@@ -90,7 +89,7 @@
 			</div>
 			
 		</section>
-		<section id="wrapper row">
+		<section class="wrapper row">
 			<nav class="content-nav col-sm-3 clearfix">
 				<ul id="nav-menu">
 					<li class="cat-item cat-item-46 nav-list nav-list1"><a href="index.html" class="nav-list-a"><i class="fa fa-home" aria-hidden="true"></i>HOME</a></li>
@@ -283,7 +282,7 @@
 		<footer class="footer">
 			<div class="footer-inner clearfix">
 				<div class="footer-box footer-logo">
-					<img src="img/header-img.png" alt="">
+					<img src="img/header-img.png" id="footer-img" alt="">
 				</div>
 				<div class="footer-box footer-category">
 					<p>まとめのカテゴリ一覧</p>
