--- a/index.html
+++ b/index.html
@@ -233,44 +233,44 @@
 				
 			</div>
 		<div class="sidebar col-sm-4">
-				<div id="side-title">
+				<div class="side-title">
 					<div id="side-inner">
 						<h2>アクセスランキング</h2>
 						<p>人気のある記事ランキング</p>
 					</div>
 					<div id="rank">
 						<ul>
-							<li class="rank-li">
+							<li class="rank-li clearfix">
 								<a href="index.html" ><img src="img/rank1.jpg" alt="" class="rank-img"></a>
 								<a href="index.html" class="rank-a">面接でよく聞かれる学生時代に頑張ったことの質問の意図と答え方</a>
 								<a href="index.html" class="rank-a"><span class="rank-li-a">by hitomi</span></a>
 								
 							</li>
-							<li class="rank-li">
+							<li class="rank-li clearfix">
 								<a href="index.html"><img src="img/rank2.jpg" alt="" class="rank-img"></a>
 								<a href="index.html" class="rank-a">こんなに違う！公務員と民間企業の違い</a>
 								<a href="index.html" class="rank-a"><span class="rank-li-a">by hitomi</span></a>
 							</li>
-							<li class="rank-li">
+							<li class="rank-li clearfix">
 								<a href="index.html"><img src="img/rank3.jpg" alt="" class="rank-img"></a>
 								<a href="index.html" class="rank-a">「私服でお越しください」と言われた会社説明会や面接。実際はどんな服装で行ったらいい？</a>
 								<a href="index.html" class="rank-a"><span class="rank-li-a">by hitomi</span></a>
 							</li>
-							<li class="rank-li">
+							<li class="rank-li clearfix">
 								<a href="index.html"><img src="img/rank4.jpg" alt="" class="rank-img"></a>
 								<a href="index.html" class="rank-a">【シチュエーション別】backnumberの恋愛ソングまとめ</a>
 								<a href="index.html" class="rank-a"><span class="rank-li-a">by peko</span></a>
 							</li>
-							<li class="rank-li">  
-								<a href="index.html"><img src="img/rank5.jpg" alt="" class="rank-img"></a>
+							<li class="rank-li clearfix">  
+								<a href="index.html"><img src="img/rank5.jpg" alt=""  class="rank-img"></a>
 								<a href="index.html" class="rank-a">【女性歌手編】両思いのカップル必見！心温まるj-popラブソング１５選</a>
-								<a href="index.html" ><span class="rank-li-a">by peko</span></a>
+								<a href="index.html" class="rank-a"><span class="rank-li-a">by peko</span></a>
 							</li>
 						</ul>
 					</div>
 				</div>
 				<h2 class="sidebar-bottom"><strong>今の時期こそ<br>知っておきたいことを特集しました！</strong></h2>
-			<div class="clearfix col-sm-1">
+			<div class="clearfix col-sm-9 sidebar-list">
 				<ul class="sidebar-box clearfix">
 					<li class="side-box-li"><a href="index.html"><img src="img/baito.png" alt="" class="sidebar-img"></a></li>
 					<li class="side-box-li"><a href="index.html"><img src="img/recruit.png" alt="" class="sidebar-img"></a></li>
