formタグを変更

--- a/index2.html
+++ b/index2.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/styleshhet_2.css">
 		<link rel="shortcut icon" href="img/logo.png">
-		
+		<script src="https://use.fontawesome.com/afa42800ec.js"></script>
 	</head>
 	<body>
 		<header id="header" class="clearfix">
@@ -34,11 +34,9 @@
 						<div class="form-group">
 							<lavel>
 							<span class="screen-reader-text"></span></lavel>
-							<input type="search" class="search-field from-control" placeholder="検索したいワードを入れよう" aria-describedby="sizing-addon3" value="" name="s" title="検索"/>
+							<input type="search" class="search-fiel from-control" placeholder="検索したいワードを入れよう"  value="" title="検索"/>
 						</div>
-						<div class="form-grounp">
-							<input type="submit" class="search-submit btn btn-default" value="検索"/>
-						</div>
+							<input type="submit" class="search-submit btn btn-default" aria-hidden="true" value="&#xf002;"/>
 						</form>
 					</div>
 				</div>
